Added Function to clear the todo list

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <p>Double click an item to mark it done.</p>
     <input id='input-item' type="text">
     <button onclick="addItemToList()">Add</button>
+    <button onclick="clearList()">Clear List</button>
     <ol id="items-list">
     </ol>
     <script src="script.js"></script>
